# servant-swagger-haskellx-2017

./: README.md  example.cabal  stack.yaml  swagger.json
server/: Main.hs
src/Todo/: API.hs  Server.hs
test/: TodoSpec.hs
