name:                example
version:             1.0
synopsis:            Servant and Swagger demonstration.
description:         Servant and Swagger demonstration.
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           (c) 2017, Nickolay Kudasov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:
  swagger.json

library
  ghc-options:      -Wall
  hs-source-dirs: src/
  exposed-modules:
    Todo.API
    Todo.Server
  build-depends:  base
                , aeson
                , aeson-pretty
                , bytestring
                , lens
                , servant
                , servant-server
                , servant-swagger
                , servant-swagger-ui
                , swagger2
                , text
                , time
                , stm
  default-language: Haskell2010

executable example-server
  ghc-options:      -Wall
  hs-source-dirs: server/
  main-is: Main.hs
  build-depends:  base
                , example
                , servant-server
                , warp
                , stm
  default-language: Haskell2010

test-suite swagger-server-spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    TodoSpec
    Paths_example
  build-depends:    base  == 4.*
                  , base-compat >= 0.6.0
                  , aeson >=0.11.2.0
                  , bytestring
                  , example
                  , hspec
                  , servant-swagger
                  , QuickCheck
                  , quickcheck-instances
  default-language: Haskell2010

